[package]
name = "db-tutorial"
version = "0.1.0"
authors = ["Nikita Antonenkov <krigar1184@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
lazy-regex = "2.2.1"
lazy_static = "1.4.0"
itertools = "0.10.1"
